# cerberus

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  cerberus.py  requirements.txt  run_test.sh  setup.cfg  start_cerberus.py  test.sh  tox.ini
.github/workflows/: ci.yml  docker-image.yml  flake8.yml  tox.yml
CI/: README.md  master_test.sh  run_ci.sh  run_test.sh  test.sh  time_tracker.json
CI/tests/: common.sh  my_tests  test_daemon_disabled.sh  test_detailed_data_inspection.sh  test_list  test_slack_integration.sh
CI/tests/test-configs/: hello_openshift_pod.yaml
cerberus/: start_cerberus.py
cerberus/database/: client.py
cerberus/inspect/: inspect.py
cerberus/invoke/: command.py
cerberus/kubernetes/: client.py
cerberus/prometheus/: client.py
cerberus/redis/: client.py
cerberus/server/: server.py
cerberus/slack/: slack_client.py
config/: config.ini  config.yaml  kubernetes_config.yaml
containers/: Dockerfile  Dockerfile-ppc64le  Dockerfile.ppc64le  README.md  build_own_image-README.md  cerberus.yml
custom_checks/: custom_check_sample.py
docs/: alerts.md  config.md  consume-signal.md  contribute.md  example_report.md  index.md  installation.md  node-problem-detector.md  slack.md  usage.md
history/: analysis.html
src/: cerberus.py
tests/: common.sh  test_daemon_disabled.sh  test_detailed_data_inspection.sh  test_slack_integration.sh
