# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = cerberus-client
version = 1.0.0
author = Naga Ravi Chaitanya Elluri
author-email = nelluri@redhat.com
description = Guardian of Kubernetes and OpenShift Clusters
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license = mit
license_file = LICENSE
url = https://github.com/openshift-scale/cerberus
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    setuptools
    PyYAML
    requests
    kubernetes
    datetime
    configparser
    slackclient
    pyfiglet
    prometheus_api_client

[options.package_data]
cerberus = config.yaml

[options.extras_require]
# Add here additional requirements for extra features, to install with:

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggsse

[options.entry_points]
console_scripts =
    cerberus_client = cerberus.start_cerberus:start
